--- a/ProfSite/Views/Bravecto/index.cshtml
+++ b/ProfSite/Views/Bravecto/index.cshtml
@@ -8,7 +8,7 @@
     <title>@bvResources.Bravecto_Homepage_Title</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link rel="icon" href="images/favicon.png" />
+    <link rel="icon" href="~/Images/favicon.png" />
 
     <!-- Typekit font is a close helvetica alternative. Replace with helvetica when available. -->
     <!--
@@ -46,12 +46,12 @@
                     <li role="presentation"><a href="/bravecto/contact-us">CONTACT US</a></li>
                 </ul>
             </nav>
-            <a href="/bravecto/index" class="navbar-brand bravovets">
+            <a href="/bravecto" class="navbar-brand bravovets">
                 <img src="/images/logo-bravecto@2x.png" alt="Bravecto Logo" class="logo-bravecto">
             </a>
         </div>
     </div>
-    <div id="subheader">
+    <div id="subheader" class="withpadding">
         <div class="container">
             <div class="row">
                 <div class="col-sm-3">
