--- a/ProfSite/Views/Bravecto/products.cshtml
+++ b/ProfSite/Views/Bravecto/products.cshtml
@@ -185,7 +185,7 @@
             and deepen your relationips.
         </p>
         <p>
-            <span class="orange">Contact your Merck sales representative</span> today to learn more
+            <a class="orange" href="/bravecto/contact-us"><span class="orange">Contact your Merck sales representative</span></a> today to learn more
             and start prescribing Bravecto to the dogs you treat.
         </p>
         <p>
