--- a/ProfSite/Views/Bravopets/index.cshtml
+++ b/ProfSite/Views/Bravopets/index.cshtml
@@ -14,8 +14,8 @@
         <li class="">
             <a href="#health">&nbsp;</a>
         </li>
-        <li class="adherence">
-            <a href="#adherence">&nbsp;</a>
+        <li class="safety">
+            <a href="#safety">&nbsp;</a>
         </li>
     </ul>
 </div>
@@ -99,21 +99,21 @@
     <div class="container items">
         <div class="row">
             <div class="col-md-4">
-                <img src="http://placehold.it/50x50" />
-                <h4>THE LONGEST-LASTING<BR />CHEW EVER</h4>
+                <img src="~/Content/img/calendar_icon.png" />
+                <h4>THE LONGEST-LASTING<br />CHEW EVER</h4>
                 <p>
                     Keeps dogs protected for up to 12 weeks.*
                 </p>
             </div>
             <div class="col-md-4">
-                <img src="http://placehold.it/50x50" />
+                <img src="~/Content/img/clock_icon.png" />
                 <h4>RAPIDLY KILLS AND <br />CONTINUOUSLY PROTECTS</h4>
                 <p>
                     Protects dogs from a wide range of fleas and ticks.
                 </p>
             </div>
             <div class="col-md-4">
-                <img src="http://placehold.it/50x50" />
+                <img src="~/Content/img/raindrop_icon.png" />
                 <h4>WON'T<br />RINSE OFF</h4>
                 <p>
                     Stays on while grooming washing or swimming.
@@ -122,21 +122,21 @@
         </div>
         <div class="row">
             <div class="col-md-4">
-                <img src="http://placehold.it/50x50" />
+                <img src="~/Content/img/hand_icon.png" />
                 <h4>CLEAN AND<br /> EASY DOSING</h4>
                 <p>
                     This means you can treat and hug.
                 </p>
             </div>
             <div class="col-md-4">
-                <img src="http://placehold.it/50x50" />
+                <img src="~/Content/img/calendar-alert_icon.png" />
                 <h4>FEWER CHANCES<br /> TO FORGET</h4>
                 <p>
                     Only 4 doses are required for full-year protection.
                 </p>
             </div>
             <div class="col-md-4">
-                <img src="http://placehold.it/50x50" />
+                <img src="~/Content/img/bug_icon.png" />
                 <h4>POWERFUL PROTECTION<br />FROM BOTH</h4>
                 <p>
                     Protection against both fleas and ticks in one tasty chews.
@@ -146,19 +146,234 @@
     </div>
 </div>
 <div id="health">
-    <div class="static-section protection">
+    <div class="static-section protection health">
         <div class="container">
             <div class="static-overlay bgbordeaux">
                 <h2>HEALTH</h2>
             </div>
         </div>
     </div>
+    <div class="static-body protection">
+        <div class="container">
+            <h2>LOOK OUT FOR THE ONE THAT'S ALWAYS LOOKING OUT FOR YOU.</h2>
+            <p>
+                Monthly topical flea and tick solutions require your dog to stay away from you and your family
+                while the Studies show that monthly treatments are often forgotten<sup>1</sup> - with the average
+                dog only being protected from fleas and ticks for 2.8 months out of the year. That means that, for nearly
+                9 months every year, most dogs are at risk for not only infestations - but also diseases that fleas and ticks
+                carry. This can be a big problem, as some ticks are known to carry multiple infections that can complicate
+                treatment and lead to even greater health risks.
+            </p>
+            <p>
+                But, with just one chew, fleas and ticks don't stand a chance. Treat and prevent infestations for up to 12
+                full weeks - so you can help keep the furriest member of your family healthy, longer. Ask your vet about
+                the longest-lasting chewable treatment available today.
+            </p>
+            <div class="row health-items">
+                <div class="col-md-4">
+                    <img src="~/Content/img/3_5milbooklet.png" />
+                    <h4>FLEA & TICK LIFECYCLE<br />INFOGRAPHIC</h4>
+                    <p>
+                        Why is it so important to stay <br />on schedule
+                        with your dog's<br /> flea and tick protection?<br />
+                        Find out now
+                    </p>
+                    <a class="btn btn-default" href="#" role="button">
+                        DOWNLOAD PDF
+                        <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <img src="~/Content/img/3_5milbooklet.png" />
+                    <h4>THE UNTOLD STORY<br />INFOGRAPHIC</h4>
+                    <p>
+                        What are the dangers to<br /> your dog that lurk inside<br />
+                        fleas and ticks?<br />
+                        Check them out now.
+                    </p>
+                    <a class="btn btn-default" href="#" role="button">
+                        DOWNLOAD PDF
+                        <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+                    </a>
+                </div>
+                <div class="col-md-4">
+                    <img src="~/Content/img/3_5milbooklet.png" />
+                    <h4>THE EASY LIFE<br />INFOGRAPHIC</h4>
+                    <p>
+                        Do you know the 8 simple<br /> steps you should
+                        be taking<br /> to care for your dog<br />
+                        Get the list now.
+                    </p>
+                    <a class="btn btn-default" href="#" role="button">
+                        DOWNLOAD PDF
+                        <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
-@section scripts {
+<div id="safety">
+    <div class="static-section safety">
+        <div class="container">
+            <div class="static-overlay bgbordeaux">
+                <h2>SAFETY</h2>
+            </div>
+        </div>
+    </div>
+    <div class="static-body safety">
+        <div class="container">
+            <h2>LONGER-LASTING PROTECTION FOR YOUR BEST FRIEND.</h2>
+            <p>
+                Now all dogs can enjoy the longest-lasting protection available in a chew - no matter
+                where they are or what they're up to. And, it works quickly. So if your sidekick has an infestation,
+                just administer the chew and the fleas and ticks will start dying within just 2 hours - and,
+                within 24 hours, they'll all be dead.
+            </p>
+        </div>
+        <div class="container">
+            <div class="row safety-list-items-row">
+                <div class="col-md-6">
+                    <p>
+                        This breakthrough treatment has been proven safe
+                        for all dogs at 5X the maximum clinical dose - with no
+                        known side effects! - including:
+                    </p>
+                    <ul class="list-unstyled safety-list">
+                        <li class="clearfix">
+                            <span class="label label-green"><i class="glyphicon glyphicon-ok"></i></span>
+                            <p>Dogs as young as 6 months old, that are at least 4.4 lbs.</p>
+                        </li>
+                        <li class="clearfix">
+                            <span class="label label-green"><i class="glyphicon glyphicon-ok"></i></span>
+                            <p>Breeding, pregnant or lactating dogs</p>
+                        </li>
+                        <li class="clearfix">
+                            <span class="label label-green"><i class="glyphicon glyphicon-ok"></i></span>
+                            <p>"Ivermerctin-sensitive" dogs</p>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col-md-6">
+                    <p>
+                        Plus, since it works from the inside out, you, your family or other pets
+                        are always safe from exposure - no matter what kind of adventure you're on.
+                    </p>
+                    <p>
+                        Whether out saving the world or making splash, you can be sure that your dog will be protected
+                        for up to 12 weeks. Ask your vet about <span class="orange">the longest-lasting chewable treatment available.</span>
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="static-body safety">
+        <div class="container">
+            <h2>FAQs</h2>
+            <p>Get the answers to some of the most frequently asked questions - or contact your vet to learn more.</p>
+            <ul class="list-unstyled faq-list">
+                <li class="question-item">
+                    <div class="question">
+                        <p>Why is this treatment only available through veterinarians?</p>
+                        <img src="~/Content/img/plus_icon.png" />
+                    </div>
+                    <div class="content">
+                        <p></p>
+                    </div>
+                </li>
+                <li class="question-item">
+                    <div class="question">
+                        <p>How does this treatment kill fleas and ticks?</p>
+                        <img src="~/Content/img/plus_icon.png" />
+                    </div>
+                    <div class="content">
+                        <p>
+                            After you give your dog this treatment, it quickly reaches tissue fluids just under your dog's skin.
+                            When fleas and ticks feed, they ingest the fluralaner module molecule and die. Fluralaner starts working
+                            within 2 hours. By 12 hours after treatment, fleas and ticks are dead. Fluralaner kills fleas, prevents flea
+                            infestations and kills ticks (black-legged tick, American dog tick and brown dog tick) for up to 12 weeks.
+                            It also kills lone star ticks for up to 8 weeks.
+                        </p>
+                    </div>
+                </li>
+                <li class="question-item">
+                    <div class="question">
+                        <p>
+                            My dog is taking some medications for another condition as well right now. <br />Is it safe
+                            to give her this treatment as well?
+                        </p>
+                        <img src="~/Content/img/plus_icon.png" />
+                    </div>
+                    <div class="content">
+                        <p></p>
+                    </div>
+                </li>
+                <li class="question-item">
+                    <div class="question">
+                        <p>
+                            Can I give this to my cat?
+                        </p>
+                        <img src="~/Content/img/plus_icon.png" />
+                    </div>
+                    <div class="content">
+                        <p></p>
+                    </div>
+                </li>
+                <li class="question-item">
+                    <div class="question">
+                        <p>
+                            How palatable is it?
+                        </p>
+                        <img src="~/Content/img/plus_icon.png" />
+                    </div>
+                    <div class="content">
+                        <p></p>
+                    </div>
+                </li>
+                <li class="question-item">
+                    <div class="question">
+                        <p>
+                            What time of day should I give it to my dog?
+                        </p>
+                        <img src="~/Content/img/plus_icon.png" />
+                    </div>
+                    <div class="content">
+                        <p></p>
+                    </div>
+                </li>
+                <li class="question-item">
+                    <div class="question">
+                        <p>
+                            Do the chewable tablets contain wheat or gluten?
+                        </p>
+                        <img src="~/Content/img/plus_icon.png" />
+                    </div>
+                    <div class="content">
+                        <p></p>
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
 
+@section scripts {
     <script type="text/javascript">
         $(document).ready(function () {
             $('body').scrollspy({ target: '#side-nav' });
+
+            $('li.question-item').on('click', function () {
+                var $this = $(this);
+                if ($this.hasClass('active')) {
+                    $this.removeClass('active');
+                    $this.find('div.content').slideUp('fast');
+                    $this.find('img').attr('src', '/Content/img/plus_icon.png');
+                } else {
+                    $this.addClass('active');
+                    $this.find('div.content').slideDown('fast');
+                    $this.find('img').attr('src', '/Content/img/minus_icon.png');
+                }
+            });
 
             var imagePATH = "/Content/img/", clockImgArr = [],
                 clockImgPNGArr = [],
