--- a/ProfSite/Views/Shared/_LayoutBravoPets.cshtml
+++ b/ProfSite/Views/Shared/_LayoutBravoPets.cshtml
@@ -7,7 +7,7 @@
     <title>@ViewBag.Title</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link rel="icon" href="images/favicon.png" />
+    <link rel="icon" href="~/Images/favicon.png" />
 
     <!-- Typekit font is a close helvetica alternative. Replace with helvetica when available. -->
     <!--
@@ -51,8 +51,8 @@
                     <li class="@(ViewBag.SelectedNode == "contactus" ? "active" : "")" role="presentation"><a href="/bravecto/contact-us">CONTACT US</a></li>
                 </ul>
             </nav>
-            <a href="/bravopets/index" class="navbar-brand bravovets">
-                <img src="~/images/logo-bravecto@2x.png" alt="BravoPets Logo" class="logo-bravecto">
+            <a href="/bravopets/index" class="navbar-brand bravopets">
+                <img src="~/Content/img/BravoPets_logo.png" alt="BravoPets Logo" class="logo-bravopets">
             </a>
         </div>
     </div>
