--- a/ProfSite/Views/Bravecto/twitter.cshtml
+++ b/ProfSite/Views/Bravecto/twitter.cshtml
@@ -27,7 +27,7 @@
                         <div class="social-content">
                             @{Html.RenderAction("timeline", "twitter");}
                         </div>
-                        <a class="btn btn-default" href="https://www.twitter.com/@Model" target="_blank">
+                        <a class="btn btn-default" href="https://www.twitter.com/@Model.UserName" target="_blank">
                             VIEW FULL TIMELINE
                             <span class="arrow-wrapper"><i class="icon icon-arrow-right"></i></span>
                         </a>
