--- a/ProfSite/Views/Shared/_LayoutBravecto.cshtml
+++ b/ProfSite/Views/Shared/_LayoutBravecto.cshtml
@@ -7,7 +7,7 @@
     <title>@ViewBag.Title</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
-    <link rel="icon" href="images/favicon.png" />
+    <link rel="icon" href="~/Images/favicon.png" />
 
     <!-- Typekit font is a close helvetica alternative. Replace with helvetica when available. -->
     <!--
@@ -55,7 +55,7 @@
                     <li class="@(ViewBag.SelectedNode == "contactus" ? "active" : "")" role="presentation"><a href="/bravecto/contact-us">CONTACT US</a></li>
                 </ul>
             </nav>
-            <a href="/bravecto/index" class="navbar-brand bravovets">
+            <a href="/bravecto" class="navbar-brand bravovets">
                 <img src="/images/logo-bravecto@2x.png" alt="Bravecto Logo" class="logo-bravecto">
             </a>
         </div>
@@ -80,7 +80,7 @@
                                 Social Content
                             </a>
                         </li>
-                        <li class="@(ViewBag.SelectedNode == "social-tips" ? "active" : "")">
+                        <li class="@(ViewBag.SelectedNode == "socialtips" ? "active" : "")">
                             <a href="/bravecto/social-tips">
                                 Social Tips
                             </a>
@@ -116,7 +116,7 @@
         <div class="container">
             <ul class="bottom-nav">
                 <li>
-                    <a href="/bravecto/index">Home</a>
+                    <a href="/bravecto">Home</a>
                 </li>
                 <li>
                     <a href="http://www.merck.com/about/how-we-operate/privacy/internet-privacy-policy.html?utm_source=Bravovets">PRIVACY</a>
